--- a/css/product-details-2.css
+++ b/css/product-details-2.css
@@ -1,85 +1,174 @@
-/* Product Details page layout styles */
-.page-container {
+/* Product Details - 2 page layout styles */
+.product-top-container {
+  background-color: #333333;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #FFFFFF;
+  position: relative;
+  z-index: 1;
+}
+.product-top-container::before {
+  display: block;
+  content: '';
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, .3) 0%, rgba(0, 0, 0, 0) 18%, rgba(0, 0, 0, 0) 28%, rgba(0, 0, 0, .6) 100%);
+  z-index: 1;
+}
+.product-top-container .content-wrapper {
+  overflow: hidden;
+  min-height: 420px;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  padding-top: 24px;
+  position: relative;
+  z-index: 2;
 }
-header.extra-header {
-  transform: translateY(-71px);
-  opacity: 0;
-  visibility: hidden;
-  transition: transform .6s linear .1s, height 1s linear .7s, opacity .4s ease-out; /* Hide animation */
-  position: fixed;
-  left: 0;
-  top: 0;
-  z-index: 11;
-  background: rgba(255,255,255,.97);
-  box-shadow: 0 0 20px #eee;
-  width: 100%;
-  height: 0;
+nav.breadcrumbs a:not(.breadcrumbs-link) {
+  color: #FFFFFF;
 }
-body.scrolled header.extra-header {
-  visibility: visible;
-  opacity: 1;
-  height: 70px;
-  transform: translateY(0);
-  transition: transform .6s linear .1s, height .2s linear, opacity .4s ease-out .3s; /* Show animation */
-}
-header.extra-header .content-wrapper {
-  padding: 10px 0;
+.product-top-container .top-prod-info {
   display: flex;
-  align-items: center;
+  justify-content: space-between;
+  align-items: flex-end;
 }
-.content-wrapper .extra-product-picture {
-  padding-right: 12px;
-  margin-right: 12px;
-  border-right: 1px solid #ededed;
+.top-prod-info .prod-name {
+  width: 70%;
+  padding-bottom: 33px;
 }
-.extra-product-picture figure {
-  width: 50px;
-  height: 50px;
+.top-prod-info .prod-pricing {
+  width: 28%;
 }
-.extra-name-links {
-  align-self: stretch;
+.prod-name .category-info {
+  padding-bottom: 18px;
+  display: inline-flex;
 }
-.extra-name-links h2 {
-  font-size: 18px;
-  font-weight: 400;
-  color: #333333;
-  padding: 3px 0 6px 0;
+.category-info > * {
+  background-color: #0C0C0C;
+  color: #FFFFFF;
+  font-size: 11px;
+  line-height: 13px;
+  padding: 2px 6px;
+  margin-right: 6px;
+  white-space: nowrap;
 }
-.extra-name-links .anchor-links {
+.category-info a:hover {
+  color: #FFFFFF;
+}
+.prod-name h1 {
+  text-shadow: 0 1px 1px #000;
+  color: #FFFFFF;
+  font-size: 35px;
+  letter-spacing: 0;
+  line-height: 1;
+  padding-bottom: 12px;
+}
+.prod-name h1 i.fa-fire {
+  color: #ca212a;
+}
+.prod-name .add-review {
+  display: inline-flex;
+  flex-direction: column;
+}
+.prod-name .add-review .customers-rate {
   display: flex;
-}
-.anchor-links a {
-  margin-right: 12px;
-  font-size: 13px;
-  font-weight: 700;
-  color: #999999;
-  transition: color .3s ease;
-}
-.anchor-links a:hover {
-  color: #ff4136;
-}
-.anchor-links a:last-of-type {
-  margin-right: 0;
-}
-.price-offer {
-  margin-left: auto;
-  display: flex;
-  align-items: center;
-}
-.price-offer .extra-price {
   font-size: 19px;
-  margin-right: 12px;
+  line-height: 1;
+  color: #e0dadf;
+  padding-bottom: 6px;
 }
-.price-offer a.button-choose {
-  padding: 8px 16px;
-  font-size: 16px;
+.prod-name .add-review .customers-rate .active {
+  color: #ff8a00;
 }
-footer {
-  margin-top: auto;
+.prod-name .add-review a {
+  font-size: 11px;
+  color: #999999;
+}
+.top-prod-info .prod-pricing {
+  background-color: rgba(0, 0, 0, .6);
+  font-size: 24px;
+  padding: 20px 18px;
+  text-align: center;
+}
+.prod-pricing .old-price {
+  opacity: .3;
+  text-decoration: line-through;
+}
+.prod-pricing .new-price {
+  font-size: 29px;
 }
 .product-details .details-content {
+  padding-top: 0;
+}
+.details-content aside.sidebar .sidebar-suggestions {
+  padding: 18px;
+  border: 1px solid #dce0e0;
+  margin-bottom: 30px;
+}
+.sidebar-suggestions .buy-best {
+  padding-bottom: 18px;
+}
+.sidebar-suggestions .buy-best a.button-best-buy {
+  display: block;
+  text-align: center;
+}
+.sidebar-suggestions .suggestion-stores a {
+  display: flex;
+  border: 1px solid #DDDDDD;
+  border-radius: 100px;
+  margin-bottom: 12px;
+}
+.sidebar-suggestions .suggestion-stores a:hover {
+  box-shadow: 0 3px 0 1px #ddd;
+}
+.suggestion-stores a > span {
+  width: 50%;
+  display: inline-flex;
+  align-items: center;
+  padding: 8px 12px;
+}
+.suggestion-stores a span.store-picture {
+  border-right: 1px solid #DDDDDD;
+  justify-content: center;
+}
+.suggestion-stores a span.store-suggestion {
+  justify-content: space-between;
+}
+span.store-suggestion .suggestion-price {
+  display: inline-flex;
+  flex-direction: column;
+  color: #111111;
+}
+.suggestion-price .store-price {
+  font-weight: 700;
+}
+.suggestion-price .store-name,
+.suggestion-price .stock-out {
+  color: #999999;
+  font-family: Arial, Tahoma, sans-serif;
+  font-size: 12px;
+  font-style: italic;
+}
+.suggestion-price .stock-out {
+  color: #ff4136;
+  font-weight: bold;
+  margin-top: 3px;
+  font-style: normal;
+}
+span.store-suggestion i.fa {
+  color: #ff4136;
+  font-size: 20px;
+}
+.suggestion-stores a:hover span.store-suggestion i.fa {
+  color: #0C0C0C;
+}
+
+/*.product-details .details-content {
   padding: 20px 0;
   display: flex;
   justify-content: space-between;
@@ -91,116 +180,9 @@ footer {
 }
 .details-content .sidebar {
   width: 28%;
-  position: relative;
 }
-.sidebar .top-offers-holder {
-  padding: 15px;
-  border: 1px solid #e3e3e3;
-  background-color: #FFFFFF;
-  top: 0;
-  transition: top .6s linear;
-}
-.top-offers-holder h2.heading {
-  background-color: #111111;
-  color: #FFFFFF;
-  text-transform: uppercase;
-  font-weight: 400;
-  padding: 7px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  font-size: 18px;
-  margin-bottom: 15px;
-}
-.top-offers-holder h2.heading::after {
-  top: 100%;
-  left: 50%;
-  border: 8px solid transparent;
-  content: "";
-  height: 0;
-  width: 0;
-  position: absolute;
-  pointer-events: none;
-  border-top-color: #111111;
-  margin-left: -8px;
-}
-.top-offers-holder h2.heading i {
-  font-size: 22px;
-  margin-right: 8px;
-}
-.top-offers .offer-item {
-  padding: 12px 0;
-  border-bottom: 1px solid #eee;
-  display: flex;
-  align-items: center;
-}
-.top-offers .offer-item:last-of-type {
-  border-bottom: none;
-}
-.offer-item figure {
-  margin-right: 12px;
-  min-width: 70px;
-}
-.offer-item .name-prices {
-  display: flex;
-  flex-direction: column;
-  align-self: stretch;
-  justify-content: space-between;
-  font-size: 14px;
-}
-.offer-item .name-prices a {
-  color: #111111;
-  margin-bottom: 6px;
-}
-.offer-item .name-prices .price {
-  color: #ff4136;
-  font-weight: 700;
-}
-.offer-item .name-prices .first-price {
-  opacity: .3;
-  font-size: 12px;
-  text-decoration: line-through;
-}
-.top-offers-holder .coupon-use {
-  padding-top: 12px;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-}
-.coupon-use span {
-  margin-right: 12px;
-  color: #999999;
-  font-size: 12px;
-}
-.coupon-use a {
-  box-shadow: 0 2px 2px #E7E7E7;
-  background-color: #ff4136;
-  color: #FFFFFF;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 1;
-  padding: 7px 10px;
-  transition: box-shadow .5s linear, opacity .3s linear;
-}
-.details-content .sidebar.fix-bar .top-offers-holder {
-  width: 336px;
-  position: fixed;
-  top: 84px;
-}
-.last-updated {
-  float: right;
-  font-size: 10px;
-  padding: 6px 0 0 18px;
-  white-space: nowrap;
-}
-nav.breadcrumbs {
-  padding-bottom: 18px;
-  flex-wrap: wrap;
-}
-nav.breadcrumbs > * {
-  margin-bottom: 6px !important;
-}
+
+
 .details-content .main-content h1.product-name {
   display: flex;
   align-items: center;
@@ -548,7 +530,7 @@ a.button-write-review:hover {
   overflow: hidden;
   padding: 18px;
   max-height: 99999px;
-  transition: padding-top .2s linear, padding-bottom .2s linear, opacity .3s ease-out .3s, max-height .4s linear .2s; /* Open animation */
+  transition: padding-top .2s linear, padding-bottom .2s linear, opacity .3s ease-out .3s, max-height .4s linear .2s; !* Open animation *!
 }
 .details-block input.hide-details:checked + h4 label.details-toggle i {
   transform: rotateX(180deg);
@@ -559,7 +541,7 @@ a.button-write-review:hover {
   opacity: 0;
   padding-top: 0;
   padding-bottom: 0;
-  transition: padding-top .2s linear, padding-bottom .2s linear, opacity .3s ease-out, max-height .2s linear .1s; /* Close animation */
+  transition: padding-top .2s linear, padding-bottom .2s linear, opacity .3s ease-out, max-height .2s linear .1s; !* Close animation *!
 }
 .details-block .details-toggle-content .store-offer {
   display: flex;
@@ -963,4 +945,4 @@ form.review-form .submit-action button.btn-submit-review:hover {
 .related-product-info .related-compare i {
   font-size: 16px;
   margin-right: 3px;
-}
+}*/
