--- a/css/responsive-styles.css
+++ b/css/responsive-styles.css
@@ -60,14 +60,37 @@
   header.extra-header .content-wrapper {
     padding: 10px 18px;
   }
+  .product-details .details-content {
+    flex-wrap: wrap;
+  }
   .details-content .main-content {
     width: 100%;
     padding: 0 18px;
   }
   .details-content .sidebar {
-    display: none;
-    visibility: hidden;
-    opacity: 0;
+    width: 100%;
+    padding: 18px 18px 0;
+  }
+  .sidebar .top-offers-holder,
+  .details-content .sidebar.fix-bar .top-offers-holder {
+    position: static;
+    top: initial;
+    width: 100%;
+  }
+  .top-offers-holder h2.heading {
+    justify-content: flex-start;
+  }
+  .top-offers-holder h2.heading::after {
+    left: 30px;
+  }
+  .top-offers {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .top-offers .offer-item {
+    width: 33.3%;
+    padding: 12px;
+    border: none;
   }
 }
 
@@ -230,6 +253,9 @@
     font-size: 16px;
     padding: 8px 12px;
   }
+  .top-offers .offer-item {
+    width: 50%;
+  }
 }
 
 @media screen and (max-width: 777px) {
@@ -372,6 +398,13 @@
   }
   .related-products-container .related-product-holder {
     padding: 6px;
+  }
+  .top-offers .offer-item {
+    width: 100%;
+    border-bottom: 1px solid #eee;
+  }
+  .top-offers .offer-item:last-of-type {
+    border-bottom: none;
   }
 }
 
